--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@azure/openai": "^1.0.0-beta.11",
+    "@google-cloud/speech": "^6.5.0",
     "@radix-ui/react-dialog": "^1.0.5",
     "@tabler/icons-react": "^3.1.0",
     "class-variance-authority": "^0.7.0",
@@ -17,6 +18,7 @@
     "framer-motion": "^11.0.25",
     "lucide-react": "^0.358.0",
     "next": "14.1.3",
+    "openai": "^4.33.0",
     "react": "^18.2.0",
     "react-audio-voice-recorder": "^2.2.0",
     "react-dom": "^18",
