--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18.2.0",
     "react-audio-voice-recorder": "^2.2.0",
     "react-dom": "^18",
+    "react-router-dom": "^6.22.3",
     "react-spinners": "^0.13.8",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
