--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@tabler/icons-react": "^3.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "daisy": "^0.2.0",
     "framer-motion": "^11.0.25",
+    "ion": "^1.0.1",
     "lucide-react": "^0.358.0",
     "next": "14.1.3",
     "openai": "^4.33.0",
