--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lucide-react": "^0.358.0",
     "next": "14.1.3",
     "openai": "^4.33.0",
+    "radix-ui": "^1.0.1",
     "react": "^18.2.0",
     "react-audio-voice-recorder": "^2.2.0",
     "react-dom": "^18.2.0",
